SEBSP-220 added institution_id for exam and user tables and models